--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -91,31 +91,31 @@ header .navigation ul.active {
 .carousel {
   position: relative;
   width: 100%;
-  max-width: 600px;
-  margin: 20px auto;
+  max-width: 800px;
+  margin: 0 auto;
   overflow: hidden;
   border-radius: 12px;
-  background: var(--neutral-1); /* Weißer Hintergrund */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .carousel-track {
   display: flex;
-  transition: transform 0.3s ease-in-out;
-  width: 100%;
+  transition: transform 0.5s ease-in-out;
 }
+
 .carousel-slide {
-  flex: 0 0 100%; /* Füllt den gesamten Container */
-  max-width: 100%;
+  flex: 0 0 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .carousel-slide img {
-  width: 100%; /* Füllt den Slide aus */
+  width: 100%;
   height: auto;
-  object-fit: cover;
   border-radius: 12px;
 }
+
 .carousel-button {
   position: absolute;
   top: 50%;
@@ -131,16 +131,20 @@ header .navigation ul.active {
   border-radius: 50%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
+
 .carousel-button.prev {
   left: 10px;
 }
+
 .carousel-button.next {
   right: 10px;
 }
+
 .carousel-button:hover {
   background: var(--primary-2);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
+
 
 /* Images */
 .image-placeholder {
